--- a/templates/result.html
+++ b/templates/result.html
@@ -63,7 +63,7 @@
   <img
     style="width: 70px; height: 70px"
     class="bg-info rounded-circle"
-    src="/static/avatars/{{ current_user.id }}.png"
+    src="/static/avatars/{{ comment.user_id }}.png"
     alt="avatar"
   />
   <div class="ms-3">
