--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -1,3 +1,4 @@
+<!-- Страница добавления вопросов -->
 {% extends "base.html" %} {% block main %}
 <h1 class="text-center">Добавление сценария</h1>
 <form class="nt-3" action="" method="post">
