--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,3 +1,4 @@
+<!-- Страница администрирования -->
 {% extends "base.html" %} {% block main %}
 <h1 class="text-center">Панель администратора</h1>
 <div class="d-flex mt-3">
