--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!-- Главная страница сайта с вопросами  -->
 {% extends "base.html" %} {% block main %}
 <h1 class="text-center">Choose Your Consequence</h1>
 {% if question %}
