--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+<!-- Страница регистрации -->
 {% extends "base.html" %} {% block main %}
 <h1>Регистрация</h1>
 <form action="" method="post" enctype="multipart/form-data">
