--- a/templates/result.html
+++ b/templates/result.html
@@ -1,3 +1,4 @@
+<!-- Страница с результатом ответов -->
 {% extends "base.html" %} {% block main %}
 <h1>Choose Your Consequence</h1>
 {% if not current_user.is_authenticated %}
