--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,4 @@
+<!-- Страница ошибки -->
 {% extends "base.html" %} {% block main %}
 <div class="d-flex justify-content-center align-items-center">
     <img src="{{ url_for('static', filename='img/404.gif') }}" alt="404.gif">
