--- a/templates/lk.html
+++ b/templates/lk.html
@@ -1,3 +1,4 @@
+<!-- Страница личного кабинета -->
 {% extends "base.html" %} {% block main %}
 <h1 class="text-center">Аккаунт</h1>
 {% for answer in answers %}
