--- a/templates/info.html
+++ b/templates/info.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %} {% block main %}
+<zero-md src="{{ url_for('static', filename='README.md') }}"></zero-md>
+<div class="mb-3"></div>
+{% endblock %}
+
+{% block script %}
 <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
-
-<!-- Load the element definition -->
 <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
-
-<!-- Simply set the `src` attribute to your MD file and win -->
-<zero-md src="{{url_for('static', filename='README.md')}}"></zero-md>
 {% endblock %}
