--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/login">Войти</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/api">API Docs</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/info">О проекте</a>
+        </li>
         {% endif %}
       </ul>
     </nav>
@@ -41,6 +47,7 @@
     <main class="container">
       {% block main %}{% endblock %}
     </main>
+    
     {% block script %}{% endblock %}
   </body>
 </html>
