--- a/templates/api.html
+++ b/templates/api.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block main %}
-<div>
+<h1 class="text-center">Документация по использованию API</h1>
+<div class="mt-3">
     <h2><a href="/api/questions">/api/questions</a></h2>
     <h3 class="h4">Возвращает json объект со всеми вопросами, внесёнными в базу данных</h3>
 
@@ -18,9 +19,7 @@
     <p class="text-secondary">В случае отсутствия вопросов возвращает ответ: {'error': 'Not found'}</p>
 </div>
 
-
-
-<div>
+<div class="mt-3">
     <h2><a href="/api/users">/api/users</a></h2>
     <h3 class="h4">Возвращает json объект со всеми пользователями, зарегистрированными в системе</h3>
 
@@ -39,9 +38,7 @@
     <p class="text-secondary">В случае отсутствия пользователей возвращает ответ: {'error': 'Not found'}</p>
 </div>
 
-
-
-<div>
+<div class="mt-3">
     <h2>/api/question/&lt;int:id&gt;</h2>
     <h3 class="h4">Возвращает json, содержащий информацию о конкретном вопросе</h3>
     <h5>Обазательный агрумент: id вопроса</h5>
@@ -60,9 +57,7 @@
     <p class="text-secondary">В случае отсутствия вопросов возвращает ответ: {'error': 'Not found'}</p>
 </div>
 
-
-
-<div>
+<div class="mt-3">
     <h2>/api/user/&lt;int:id&gt;</h2>
     <h3 class="h4">Возвращает json, содержащий информацию о конкретном пользователе</h3>
     <h5>Обазательный агрумент: id пользователя</h5>
@@ -79,9 +74,7 @@
     <p class="text-secondary">В случае отсутствия пользователя возвращает ответ: {'error': 'Not found'}</p>
 </div>
 
-
-
-<div>
+<div class="mt-3">
     <h2>/api/user/&lt;int:id&gt;/answers</h2>
     <h3 class="h4">Возвращает json объект со всеми ответами, которые оставил пользователь</h3>
     <h5>Обазательный агрумент: id пользователя</h5>
@@ -107,9 +100,7 @@
     <p class="text-secondary">В случае отсутствия ответов возвращает ответ: {'error': 'Not found'}</p>
 </div>
 
-
-
-<div>
+<div class="mt-3">
     <h2>/api/user/&lt;int:id&gt;/comments</h2>
     <h3 class="h4">Возвращает json объект со всеми комментариями, которые оставил конкретный пользователь</h3>
     <h5>Обазательный агрумент: id пользователя</h5>
@@ -136,9 +127,7 @@
     <p class="text-secondary">В случае отсутствия комментариев возвращает ответ: {'error': 'Not found'}</p>
 </div>
 
-
-
-<div>
+<div class="mt-3">
     <h2>/api/user/&lt;int:id&gt;/likes</h2>
     <h3 class="h4">Возвращает json объект со всеми лайками, которые оставил конкретный пользователь</h3>
     <h5>Обазательный агрумент: id пользователя</h5>
@@ -161,6 +150,4 @@
     }</p>
     <p class="text-secondary">В случае отсутствия лайков возвращает ответ: {'error': 'Not found'}</p>
 </div>
-
-
 {% endblock %}
