--- a/templates/info.html
+++ b/templates/info.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block main %}
-<zero-md src="{{ url_for('static', filename='README.md') }}"></zero-md>
+<zero-md src="https://raw.githubusercontent.com/Data-Name-ID/choose-your-consequence/main/README.md"></zero-md>
 <div class="mb-3"></div>
 {% endblock %}
 
